--- a/public/index.html
+++ b/public/index.html
@@ -171,10 +171,5 @@
     
 
     
-
-    <span>
-        Made with &#10084;&#65039; using <a target="_blank" href="https://github.com/gokarna-theme/gokarna-hugo">Gokarna</a>
-    </span>
-</footer>
-</body>
+</footer></body>
 </html>
