--- a/public/index.html
+++ b/public/index.html
@@ -33,19 +33,19 @@
 
     
     <title>Jack Montgomery</title>
-    <meta name="description" content="Sky above, sand below and peace within">
+    <meta name="description" content="A personal website about some learnings and interests of mine.">
     <meta name="keywords" content=''>
 
     <meta property="og:url" content="http://localhost:1313/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Jack Montgomery">
-    <meta property="og:description" content="Sky above, sand below and peace within">
+    <meta property="og:description" content="A personal website about some learnings and interests of mine.">
     <meta property="og:image" content="http://localhost:1313/images/profile.webp">
     <meta property="og:image:secure_url" content="http://localhost:1313/images/profile.webp">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Jack Montgomery">
-    <meta name="twitter:description" content="Sky above, sand below and peace within">
+    <meta name="twitter:description" content="A personal website about some learnings and interests of mine.">
     <meta property="twitter:domain" content="http://localhost:1313/">
     <meta property="twitter:url" content="http://localhost:1313/">
     <meta name="twitter:image" content="http://localhost:1313/images/profile.webp">
