--- a/public/index.html
+++ b/public/index.html
@@ -74,8 +74,8 @@
 <script>
     MathJax = {
         tex: {
-            displayMath: [['\\[', '\\]']],  
-            inlineMath: [['\\(', '\\)']]                  
+            displayMath: [['$$', '$$']],
+            inlineMath: [['\\(', '\\)']]
         }
     };
 </script>
