edited scan post and removed sine

--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,12 @@
 
         <div class="nav-links">
 
-            
+            <div class="dark-theme-toggle">
+                <span class="sr-only dark-theme-toggle-screen-reader-target">theme</span>
+                <a aria-hidden="true" role="switch">
+                    <span class="theme-toggle-icon" data-feather="moon"></span>
+                </a>
+            </div>
 
             <span class="nav-icons-divider"></span>
 
